added methods to BaseDao interface that were created in mongoBaseDao